--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="heading">
-        <a href="https://sarvan-kumar.framer.website" style="font-size: 24px;">
+        <a href="#" style="font-size: 24px;">
             <i class="fa fa-home"></i>
         </a><br><br>
         <h1>Get in Touch!</h1>
